--- a/app/src/main/res/layout/activity_main2.xml
+++ b/app/src/main/res/layout/activity_main2.xml
@@ -115,6 +115,16 @@
         app:layout_constraintRight_toLeftOf="@id/guide2"
         />
 
+    <TextView
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:text="@string/integrantes"
+        android:textSize="20dp"
+        app:layout_constraintTop_toBottomOf="@+id/guide11"
+        app:layout_constraintLeft_toRightOf="@id/guide1"
+        app:layout_constraintRight_toLeftOf="@id/guide2"
+        />
+
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/guide1"
@@ -194,6 +204,14 @@
         android:layout_height="match_parent"
         android:orientation="horizontal"
         app:layout_constraintGuide_percent="0.19">
+    </androidx.constraintlayout.widget.Guideline>
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guide11"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="horizontal"
+        app:layout_constraintGuide_percent="0.9">
     </androidx.constraintlayout.widget.Guideline>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
