Se cambia el theme del archivo manifest a AppCompat.NoActionBar para que funcione el @drawable en los botones, actividad 100% completada

--- a/app/src/main/res/layout/activity_main2.xml
+++ b/app/src/main/res/layout/activity_main2.xml
@@ -52,8 +52,7 @@
         android:textSize="25dp"
         android:textColor="@color/white"
         android:text="@string/btn1"
-        android:backgroundTint="@color/btn1"
-        android:background="@drawable/estilo_botones"
+        android:background="@drawable/btn1"
         app:layout_constraintTop_toBottomOf="@id/guide5"
         app:layout_constraintLeft_toRightOf="@id/guide1"
         app:layout_constraintRight_toLeftOf="@id/guide2"
@@ -66,8 +65,7 @@
         android:textSize="25dp"
         android:textColor="@color/white"
         android:text="@string/btn2"
-        android:backgroundTint="@color/btn2"
-        android:background="@drawable/estilo_botones"
+        android:background="@drawable/btn2"
         app:layout_constraintTop_toBottomOf="@id/guide6"
         app:layout_constraintLeft_toRightOf="@id/guide1"
         app:layout_constraintRight_toLeftOf="@id/guide2"
@@ -80,8 +78,7 @@
         android:textSize="25dp"
         android:textColor="@color/white"
         android:text="@string/btn3"
-        android:backgroundTint="@color/btn3"
-        android:background="@drawable/estilo_botones"
+        android:background="@drawable/btn3"
         app:layout_constraintTop_toBottomOf="@id/guide7"
         app:layout_constraintLeft_toRightOf="@id/guide1"
         app:layout_constraintRight_toLeftOf="@id/guide2"
@@ -94,8 +91,7 @@
         android:textSize="25dp"
         android:textColor="@color/white"
         android:text="@string/btn4"
-        android:backgroundTint="@color/btn4"
-        android:background="@drawable/estilo_botones"
+        android:background="@drawable/btn4"
         app:layout_constraintTop_toBottomOf="@id/guide8"
         app:layout_constraintLeft_toRightOf="@id/guide1"
         app:layout_constraintRight_toLeftOf="@id/guide2"
@@ -108,8 +104,7 @@
         android:textSize="25dp"
         android:textColor="@color/white"
         android:text="@string/btn5"
-        android:backgroundTint="@color/btn5"
-        android:background="@drawable/estilo_botones"
+        android:background="@drawable/btn5"
         app:layout_constraintTop_toBottomOf="@id/guide9"
         app:layout_constraintLeft_toRightOf="@id/guide1"
         app:layout_constraintRight_toLeftOf="@id/guide2"
@@ -120,6 +115,7 @@
         android:layout_height="wrap_content"
         android:text="@string/integrantes"
         android:textSize="20dp"
+        android:textColor="@color/textInput"
         app:layout_constraintTop_toBottomOf="@+id/guide11"
         app:layout_constraintLeft_toRightOf="@id/guide1"
         app:layout_constraintRight_toLeftOf="@id/guide2"
